<resources>
    <string name="app_name">Sudoku</string>
    <string name="title_menu">Menu</string>
    <string name="title_Stats">Statistiques</string>
    <string name="btn_newGame">nouvelle partie</string>
    <string name="btn_resumeGame">reprendre la partie</string>
    <string name="btn_9">9</string>
    <string name="btn_8">8</string>
    <string name="btn_7">7</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="varTimer">%1$02d:%2$02d:%3$02d</string>
    <string name="btnReset">Reset</string>
    <string name="btnResult">Check</string>
    <string name="Loading">Chargement…</string>
    <string name="timeToClear">Temps passé :</string>
    <string name="nbEssai">Nombres D\'essais :</string>
    <string name="btnBack">Revenir au menu</string>
    <string name="numberOfSudoku">Nombres de Sudokus : %1d</string>
    <string name="varInt">%1$d</string>
    <string name="numberOfStartingSudoku">Nombres de Sudokus commencer :\n %1d</string>
    <string name="numberOfFinishedSudoku">Nombres de Sudokus finis :\n %1d</string>
    <string name="timeToClearGlobal">temps total passé :\n %1$d an, %2$d jours, %3$02dh, %4$02dm, %5$02ds</string>
    <string name="timeToClearMoy">Temps moyen passé par sudoku :\n %1$d jours, %2$02dh, %3$02dm, %4$02ds</string>
    <string name="nbEssaiGlobal">Nombres d\'essais totaux :\n %1d</string>
    <string name="nbEssaiMoy">Nombres d\'essais moyen par sudoku :\n %1d</string>
    <string name="doReset">oui</string>
    <string name="dontReset">non</string>
    <string name="dialogReset">Voulez-vous vraiment remettre à zéro le sudoku?</string>
    <string name="date" />
    <string name="deleteUserInput">Voulez-vous vraiment supprimer ce sudoku?</string>
    <string name="dialogResetBdd">Cela va remettre à zéro tous les sudokus êtes vous certain de vouloir le faire?</string>
</resources>
